[gd_scene load_steps=3 format=2]

[ext_resource path="res://UI/HUD.gd" type="Script" id=1]
[ext_resource path="res://Assets/2DArt/Butterfly/resting.png" type="Texture" id=2]

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = -80.0
margin_right = 200.0
margin_bottom = -80.0
rect_min_size = Vector2( 50, 50 )
__meta__ = {
"_edit_lock_": true
}

[node name="FullnessLabel" type="Label" parent="VBoxContainer"]
margin_right = 170.0
margin_bottom = 23.0
size_flags_vertical = 7
text = "0 / 0"
align = 1
valign = 1

[node name="FullnessBar" type="ProgressBar" parent="VBoxContainer"]
margin_top = 27.0
margin_right = 170.0
margin_bottom = 50.0
size_flags_vertical = 3
max_value = 1.0
value = 0.32
percent_visible = false

[node name="Container" type="Control" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -80.0
margin_top = -80.0
margin_right = -80.0
margin_bottom = -80.0
rect_min_size = Vector2( 50, 50 )
__meta__ = {
"_edit_lock_": true
}

[node name="MateColor" type="ColorRect" parent="Container"]
margin_right = 50.0
margin_bottom = 50.0
color = Color( 0.0823529, 0.709804, 0.0470588, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Mate" type="TextureRect" parent="Container"]
anchor_left = -0.082
anchor_right = 1.0
anchor_bottom = 1.155
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 2 )
expand = true
stretch_mode = 6
flip_h = true
__meta__ = {
"_edit_lock_": true
}
